[tool.poetry]
name = "smarterigor"
version = "0.1.0"
description = "Neural Igor"
authors = ["Egor Domnin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.24.0"
sentencepiece = "^0.1.97"
torch = "^1.12.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
